--- a/css/CountryStyle.css
+++ b/css/CountryStyle.css
@@ -10,4 +10,6 @@ hr {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-    
+li {
+	list-style-type: square;
+}
