--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -18,7 +18,15 @@ div.center {
     
 }
 
+
 #spin:hover {
-	transition: transform 1s ease;
-	transform: rotate(360deg);
+	animation-name: rotate;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+@keyframes rotate {
+	from {transform: rotate(0deg);}
+	to { transform: rotate(360deg); }
 }
