--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 .main{
-	color: white;
+	/*color: white;*/
 	font-size: 20px;
 }
 
@@ -48,6 +48,5 @@ div.center {
   display: flex;
   justify-content: center;
   align-items: center;
-
 
 }
